# cornerstone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  auto.bb  build.sh  check.h  cmd.texp  gen.cpp  gen.h  grammar.cpp  grammar.h  huh  installer.sh  ist.d  kakefile  macros.h  main.cpp  makefile  matcher.cpp  matcher.h  nopdecl.bb  parser.cpp  parser.h  pass.h  reader.h  test.cpp  tester.d  texp.cpp  texp.h  todo.json  todo.texp  type.cpp  type.h
backbone/: driver.bb  gen.bb  includer.bb  passconfig.bb
docs/: alloca-as-the-new-malloc.md  backbone-crash-course.md  backbone-wisdom.md  bb-grammar.texp  bb-tall-grammar.texp  bb-type-grammar.texp  bb-type-tall-grammar.texp  bb-type-tall-str-grammar.texp  bb-type-tall-str-include-grammar.texp  cornerstone-crash-course.md  grammar.bb  grammar.md  grammar.texp  ideas.md  lisp-thoughts.md  log.md  notes.md  patcher.md  runtime-grammar.md  struct-getelementptr.md  texp-alloc.md  texp-notational-grammar.md  the-modern-compiler.md  todo.md  tutorial-making-a-grammar.md  unparser.md
driver/: CMakeLists.txt  main.cpp
examples/: auto.bb  fib_store.bb  fib_tail_call.bb  file_read_example.bb  flash_term.bb  hello_world.bb  hello_world_fib.bb  tee.bb
grammars/: backbone.texp  bb-tall.lang  bb-type.lang
lib/: CMakeLists.txt  annotation.bb  core.bb  file.bb  gen.cpp  gen.h  gen.hpp  grammar.cpp  grammar.h  grammar.hpp  i8.bb  includer.h  includer.hpp  intern.bb  intstr.bb  io.h  io.hpp  llvmtype.h  llvmtype.hpp  macros.h  macros.hpp  main-driver.bb  matcher-driver.bb  matcher.bb  matcher.cpp  matcher.h  matcher.hpp  normalize.h  normalize.hpp  optional.bb  parser-driver.bb  parser.bb  parser.cpp  parser.h  parser.hpp  pass.cpp  pass.h  pass.hpp  pprint.bb  print.h  (+26 more)
lib/os/: path.bb
lib2/: core.bb  core.bb.type.tall  file.bb  grammar.bb  i8.bb  intstr.bb  matcher.bb  parser.bb  pprint.bb  reader.bb  result.bb  stdc.bb  string.bb  string.bb.type.tall  texp.bb
llvm-test/: base_element_sized.ll  fcntl.c  fcntl.ll  flush.c  flush.ll  hello_world.c  hello_world.ll  readtest.c  scanf.c  scanf.ll  string.c  stringview_print.c  stringview_print.ll  struct-literal.c  struct-literal.ll  struct.c  struct.ll
main/: CMakeLists.txt  main.cpp
matcher/: CMakeLists.txt  main.cpp
parser/: CMakeLists.txt  main.cpp
res/: grammar.bb
runner/: main.bb
test/: CMakeLists.txt  test.cpp
tester/: CMakeLists.txt  main.cpp
typer/: CMakeLists.txt  main.cpp
